# EZLife

./: .gitignore  README.md
docs/: Tecknical task.md
docs/Схемы/: Состояния.drawio
main_code/: .gitignore  Cargo.toml  db.sqlite
main_code/src/: add_functions.rs  callback_handlers.rs  comands_handlers.rs  enums.rs  handler_functions.rs  main.rs  notion_apis.rs  yagpt_apis.rs
main_code/src/shemas/: notion_checkers_shemas.rs  notion_shemas.rs  ya_gpt_shemas.rs
main_code/user_conf/: 821961326
site/: index.html
