[package]
name = "simple-rust-tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

teloxide = { version = "0.12.2", features = ["macros", "sqlite-storage", "redis-storage", "bincode-serializer", "ctrlc_handler"] }
log = "0.4.21"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.37.0" , features = ["full"] }
dotenvy = "0.15.7"
chrono = "0.4.38"
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
url = "2.5.0"
